# shiny-journey

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  pyrightconfig.json  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 092ec644412f_create_items_table.py  804f498560da_create_task_table.py  e1c7a3ffb006_create_items_table.py
app/: main.py
app/core/: config.py  database.py  dependencies.py
app/models/: item.py  task.py
app/routers/: items.py  tasks.py
app/schemas/: item.py  task.py
app/services/: scheduler.py
tests/: conftest.py  test_items.py  test_tasks.py
